--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 the square keep your left and right wrist far from each other. 
                 Move you nose to move the square
             </h3>
+            <h4>text to be displayed</h4>
+            <input placeholder="text" id="text">
             <span></span>
 
 
